--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,5 +7,5 @@ version = "0.1.0"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-async-std = "1.6"
-tiberius = {version = "0.4.9", default-features = false, features = ["tls", "tds73", "chrono", "sql-browser-async-std"]}
+# async-std = "1.6"
+# tiberius = {version = "0.4.9", default-features = false, features = ["tls", "tds73", "chrono", "sql-browser-async-std"]}
